parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> DeclFuncVar DeclProg
Rule 2     DeclFuncVar -> Tipo ID DeclVar SEMICOLON DeclFuncVar
Rule 3     DeclFuncVar -> Tipo ID LCOLC NUMBER RCOLC DeclVar SEMICOLON DeclFuncVar
Rule 4     DeclFuncVar -> Tipo ID DeclFunc DeclFuncVar
Rule 5     DeclFuncVar -> <empty>
Rule 6     DeclProg -> PROGRAMA Bloco
Rule 7     DeclVar -> COMMA ID DeclVar
Rule 8     DeclVar -> COMMA ID LCOLC NUMBER RCOLC DeclVar
Rule 9     DeclVar -> <empty>
Rule 10    DeclFunc -> LPAREN ListaParametros RPAREN Bloco
Rule 11    ListaParametros -> <empty>
Rule 12    ListaParametros -> ListaParametrosCont
Rule 13    ListaParametrosCont -> Tipo ID
Rule 14    ListaParametrosCont -> Tipo ID LCOLC RCOLC
Rule 15    ListaParametrosCont -> Tipo ID COMMA ListaParametrosCont
Rule 16    ListaParametrosCont -> Tipo ID LCOLC RCOLC COMMA ListaParametrosCont
Rule 17    Bloco -> LBRACE ListaDeclVar ListaComando RBRACE
Rule 18    Bloco -> LBRACE ListaDeclVar RBRACE
Rule 19    ListaDeclVar -> <empty>
Rule 20    ListaDeclVar -> Tipo ID DeclVar SEMICOLON ListaDeclVar
Rule 21    ListaDeclVar -> Tipo ID LCOLC NUMBER RCOLC DeclVar SEMICOLON ListaDeclVar
Rule 22    Tipo -> INT
Rule 23    Tipo -> CAR
Rule 24    ListaComando -> Comando
Rule 25    ListaComando -> Comando ListaComando
Rule 26    Comando -> SEMICOLON
Rule 27    Comando -> Expr SEMICOLON
Rule 28    Comando -> RETORNE Expr SEMICOLON
Rule 29    Comando -> LEIA LValueExpr SEMICOLON
Rule 30    Comando -> ESCREVA Expr SEMICOLON
Rule 31    Comando -> ESCREVA NORMALSTRING SEMICOLON
Rule 32    Comando -> NOVALINHA SEMICOLON
Rule 33    Comando -> SE LPAREN Expr RPAREN ENTAO Comando
Rule 34    Comando -> SE LPAREN Expr RPAREN ENTAO Comando SENAO Comando
Rule 35    Comando -> ENQUANTO LPAREN Expr RPAREN EXECUTE Comando
Rule 36    Comando -> Bloco
Rule 37    Expr -> AssignExpr
Rule 38    AssignExpr -> CondExpr
Rule 39    AssignExpr -> LValueExpr ASSIGN AssignExpr
Rule 40    CondExpr -> OrExpr
Rule 41    CondExpr -> OrExpr INTERROGATION Expr COLON CondExpr
Rule 42    OrExpr -> OrExpr OU AndExpr
Rule 43    OrExpr -> AndExpr
Rule 44    AndExpr -> AndExpr E EqExpr
Rule 45    AndExpr -> EqExpr
Rule 46    EqExpr -> EqExpr EQUALS DesigExpr
Rule 47    EqExpr -> EqExpr DIFF DesigExpr
Rule 48    EqExpr -> DesigExpr
Rule 49    DesigExpr -> DesigExpr MENOR AddExpr
Rule 50    DesigExpr -> DesigExpr MAIOR AddExpr
Rule 51    DesigExpr -> DesigExpr MAIOREQUALS AddExpr
Rule 52    DesigExpr -> DesigExpr MENOREQUALS AddExpr
Rule 53    DesigExpr -> AddExpr
Rule 54    AddExpr -> AddExpr PLUS MulExpr
Rule 55    AddExpr -> AddExpr MINUS MulExpr
Rule 56    AddExpr -> MulExpr
Rule 57    MulExpr -> MulExpr TIMES UnExpr
Rule 58    MulExpr -> MulExpr DIVIDE UnExpr
Rule 59    MulExpr -> MulExpr MOD UnExpr
Rule 60    MulExpr -> UnExpr
Rule 61    UnExpr -> MINUS PrimExpr
Rule 62    UnExpr -> EXPLAMATION PrimExpr
Rule 63    UnExpr -> PrimExpr
Rule 64    LValueExpr -> ID LCOLC Expr RCOLC
Rule 65    LValueExpr -> ID
Rule 66    PrimExpr -> ID LPAREN ListExpr RPAREN
Rule 67    PrimExpr -> ID LPAREN RPAREN
Rule 68    PrimExpr -> ID LCOLC Expr RCOLC
Rule 69    PrimExpr -> ID
Rule 70    PrimExpr -> CONSTSTRING
Rule 71    PrimExpr -> NUMBER
Rule 72    PrimExpr -> LPAREN Expr RPAREN
Rule 73    ListExpr -> AssignExpr
Rule 74    ListExpr -> ListExpr COMMA AssignExpr

Terminals, with rules where they appear

ASSIGN               : 39
CAR                  : 23
COLON                : 41
COMMA                : 7 8 15 16 74
CONSTSTRING          : 70
DIFF                 : 47
DIVIDE               : 58
E                    : 44
ENQUANTO             : 35
ENTAO                : 33 34
EQUALS               : 46
ESCREVA              : 30 31
EXECUTE              : 35
EXPLAMATION          : 62
ID                   : 2 3 4 7 8 13 14 15 16 20 21 64 65 66 67 68 69
INT                  : 22
INTERROGATION        : 41
LBRACE               : 17 18
LCOLC                : 3 8 14 16 21 64 68
LEIA                 : 29
LPAREN               : 10 33 34 35 66 67 72
MAIOR                : 50
MAIOREQUALS          : 51
MENOR                : 49
MENOREQUALS          : 52
MINUS                : 55 61
MOD                  : 59
NORMALSTRING         : 31
NOVALINHA            : 32
NUMBER               : 3 8 21 71
OU                   : 42
PLUS                 : 54
PROGRAMA             : 6
RBRACE               : 17 18
RCOLC                : 3 8 14 16 21 64 68
RETORNE              : 28
RPAREN               : 10 33 34 35 66 67 72
SE                   : 33 34
SEMICOLON            : 2 3 20 21 26 27 28 29 30 31 32
SENAO                : 34
TIMES                : 57
error                : 

Nonterminals, with rules where they appear

AddExpr              : 49 50 51 52 53 54 55
AndExpr              : 42 43 44
AssignExpr           : 37 39 73 74
Bloco                : 6 10 36
Comando              : 24 25 33 34 34 35
CondExpr             : 38 41
DeclFunc             : 4
DeclFuncVar          : 1 2 3 4
DeclProg             : 1
DeclVar              : 2 3 7 8 20 21
DesigExpr            : 46 47 48 49 50 51 52
EqExpr               : 44 45 46 47
Expr                 : 27 28 30 33 34 35 41 64 68 72
LValueExpr           : 29 39
ListExpr             : 66 74
ListaComando         : 17 25
ListaDeclVar         : 17 18 20 21
ListaParametros      : 10
ListaParametrosCont  : 12 15 16
MulExpr              : 54 55 56 57 58 59
OrExpr               : 40 41 42
PrimExpr             : 61 62 63
Programa             : 0
Tipo                 : 2 3 4 13 14 15 16 20 21
UnExpr               : 57 58 59 60

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . DeclFuncVar DeclProg
    (2) DeclFuncVar -> . Tipo ID DeclVar SEMICOLON DeclFuncVar
    (3) DeclFuncVar -> . Tipo ID LCOLC NUMBER RCOLC DeclVar SEMICOLON DeclFuncVar
    (4) DeclFuncVar -> . Tipo ID DeclFunc DeclFuncVar
    (5) DeclFuncVar -> .
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    PROGRAMA        reduce using rule 5 (DeclFuncVar -> .)
    INT             shift and go to state 4
    CAR             shift and go to state 5

    Programa                       shift and go to state 1
    DeclFuncVar                    shift and go to state 2
    Tipo                           shift and go to state 3

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> DeclFuncVar . DeclProg
    (6) DeclProg -> . PROGRAMA Bloco

    PROGRAMA        shift and go to state 7

    DeclProg                       shift and go to state 6

state 3

    (2) DeclFuncVar -> Tipo . ID DeclVar SEMICOLON DeclFuncVar
    (3) DeclFuncVar -> Tipo . ID LCOLC NUMBER RCOLC DeclVar SEMICOLON DeclFuncVar
    (4) DeclFuncVar -> Tipo . ID DeclFunc DeclFuncVar

    ID              shift and go to state 8


state 4

    (22) Tipo -> INT .

    ID              reduce using rule 22 (Tipo -> INT .)


state 5

    (23) Tipo -> CAR .

    ID              reduce using rule 23 (Tipo -> CAR .)


state 6

    (1) Programa -> DeclFuncVar DeclProg .

    $end            reduce using rule 1 (Programa -> DeclFuncVar DeclProg .)


state 7

    (6) DeclProg -> PROGRAMA . Bloco
    (17) Bloco -> . LBRACE ListaDeclVar ListaComando RBRACE
    (18) Bloco -> . LBRACE ListaDeclVar RBRACE

    LBRACE          shift and go to state 10

    Bloco                          shift and go to state 9

state 8

    (2) DeclFuncVar -> Tipo ID . DeclVar SEMICOLON DeclFuncVar
    (3) DeclFuncVar -> Tipo ID . LCOLC NUMBER RCOLC DeclVar SEMICOLON DeclFuncVar
    (4) DeclFuncVar -> Tipo ID . DeclFunc DeclFuncVar
    (7) DeclVar -> . COMMA ID DeclVar
    (8) DeclVar -> . COMMA ID LCOLC NUMBER RCOLC DeclVar
    (9) DeclVar -> .
    (10) DeclFunc -> . LPAREN ListaParametros RPAREN Bloco

    LCOLC           shift and go to state 12
    COMMA           shift and go to state 14
    SEMICOLON       reduce using rule 9 (DeclVar -> .)
    LPAREN          shift and go to state 15

    DeclVar                        shift and go to state 11
    DeclFunc                       shift and go to state 13

state 9

    (6) DeclProg -> PROGRAMA Bloco .

    $end            reduce using rule 6 (DeclProg -> PROGRAMA Bloco .)


state 10

    (17) Bloco -> LBRACE . ListaDeclVar ListaComando RBRACE
    (18) Bloco -> LBRACE . ListaDeclVar RBRACE
    (19) ListaDeclVar -> .
    (20) ListaDeclVar -> . Tipo ID DeclVar SEMICOLON ListaDeclVar
    (21) ListaDeclVar -> . Tipo ID LCOLC NUMBER RCOLC DeclVar SEMICOLON ListaDeclVar
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    RBRACE          reduce using rule 19 (ListaDeclVar -> .)
    SEMICOLON       reduce using rule 19 (ListaDeclVar -> .)
    RETORNE         reduce using rule 19 (ListaDeclVar -> .)
    LEIA            reduce using rule 19 (ListaDeclVar -> .)
    ESCREVA         reduce using rule 19 (ListaDeclVar -> .)
    NOVALINHA       reduce using rule 19 (ListaDeclVar -> .)
    SE              reduce using rule 19 (ListaDeclVar -> .)
    ENQUANTO        reduce using rule 19 (ListaDeclVar -> .)
    LBRACE          reduce using rule 19 (ListaDeclVar -> .)
    ID              reduce using rule 19 (ListaDeclVar -> .)
    MINUS           reduce using rule 19 (ListaDeclVar -> .)
    EXPLAMATION     reduce using rule 19 (ListaDeclVar -> .)
    CONSTSTRING     reduce using rule 19 (ListaDeclVar -> .)
    NUMBER          reduce using rule 19 (ListaDeclVar -> .)
    LPAREN          reduce using rule 19 (ListaDeclVar -> .)
    INT             shift and go to state 4
    CAR             shift and go to state 5

    ListaDeclVar                   shift and go to state 16
    Tipo                           shift and go to state 17

state 11

    (2) DeclFuncVar -> Tipo ID DeclVar . SEMICOLON DeclFuncVar

    SEMICOLON       shift and go to state 18


state 12

    (3) DeclFuncVar -> Tipo ID LCOLC . NUMBER RCOLC DeclVar SEMICOLON DeclFuncVar

    NUMBER          shift and go to state 19


state 13

    (4) DeclFuncVar -> Tipo ID DeclFunc . DeclFuncVar
    (2) DeclFuncVar -> . Tipo ID DeclVar SEMICOLON DeclFuncVar
    (3) DeclFuncVar -> . Tipo ID LCOLC NUMBER RCOLC DeclVar SEMICOLON DeclFuncVar
    (4) DeclFuncVar -> . Tipo ID DeclFunc DeclFuncVar
    (5) DeclFuncVar -> .
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    PROGRAMA        reduce using rule 5 (DeclFuncVar -> .)
    INT             shift and go to state 4
    CAR             shift and go to state 5

    Tipo                           shift and go to state 3
    DeclFuncVar                    shift and go to state 20

state 14

    (7) DeclVar -> COMMA . ID DeclVar
    (8) DeclVar -> COMMA . ID LCOLC NUMBER RCOLC DeclVar

    ID              shift and go to state 21


state 15

    (10) DeclFunc -> LPAREN . ListaParametros RPAREN Bloco
    (11) ListaParametros -> .
    (12) ListaParametros -> . ListaParametrosCont
    (13) ListaParametrosCont -> . Tipo ID
    (14) ListaParametrosCont -> . Tipo ID LCOLC RCOLC
    (15) ListaParametrosCont -> . Tipo ID COMMA ListaParametrosCont
    (16) ListaParametrosCont -> . Tipo ID LCOLC RCOLC COMMA ListaParametrosCont
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    RPAREN          reduce using rule 11 (ListaParametros -> .)
    INT             shift and go to state 4
    CAR             shift and go to state 5

    ListaParametros                shift and go to state 22
    ListaParametrosCont            shift and go to state 23
    Tipo                           shift and go to state 24

state 16

    (17) Bloco -> LBRACE ListaDeclVar . ListaComando RBRACE
    (18) Bloco -> LBRACE ListaDeclVar . RBRACE
    (24) ListaComando -> . Comando
    (25) ListaComando -> . Comando ListaComando
    (26) Comando -> . SEMICOLON
    (27) Comando -> . Expr SEMICOLON
    (28) Comando -> . RETORNE Expr SEMICOLON
    (29) Comando -> . LEIA LValueExpr SEMICOLON
    (30) Comando -> . ESCREVA Expr SEMICOLON
    (31) Comando -> . ESCREVA NORMALSTRING SEMICOLON
    (32) Comando -> . NOVALINHA SEMICOLON
    (33) Comando -> . SE LPAREN Expr RPAREN ENTAO Comando
    (34) Comando -> . SE LPAREN Expr RPAREN ENTAO Comando SENAO Comando
    (35) Comando -> . ENQUANTO LPAREN Expr RPAREN EXECUTE Comando
    (36) Comando -> . Bloco
    (37) Expr -> . AssignExpr
    (17) Bloco -> . LBRACE ListaDeclVar ListaComando RBRACE
    (18) Bloco -> . LBRACE ListaDeclVar RBRACE
    (38) AssignExpr -> . CondExpr
    (39) AssignExpr -> . LValueExpr ASSIGN AssignExpr
    (40) CondExpr -> . OrExpr
    (41) CondExpr -> . OrExpr INTERROGATION Expr COLON CondExpr
    (64) LValueExpr -> . ID LCOLC Expr RCOLC
    (65) LValueExpr -> . ID
    (42) OrExpr -> . OrExpr OU AndExpr
    (43) OrExpr -> . AndExpr
    (44) AndExpr -> . AndExpr E EqExpr
    (45) AndExpr -> . EqExpr
    (46) EqExpr -> . EqExpr EQUALS DesigExpr
    (47) EqExpr -> . EqExpr DIFF DesigExpr
    (48) EqExpr -> . DesigExpr
    (49) DesigExpr -> . DesigExpr MENOR AddExpr
    (50) DesigExpr -> . DesigExpr MAIOR AddExpr
    (51) DesigExpr -> . DesigExpr MAIOREQUALS AddExpr
    (52) DesigExpr -> . DesigExpr MENOREQUALS AddExpr
    (53) DesigExpr -> . AddExpr
    (54) AddExpr -> . AddExpr PLUS MulExpr
    (55) AddExpr -> . AddExpr MINUS MulExpr
    (56) AddExpr -> . MulExpr
    (57) MulExpr -> . MulExpr TIMES UnExpr
    (58) MulExpr -> . MulExpr DIVIDE UnExpr
    (59) MulExpr -> . MulExpr MOD UnExpr
    (60) MulExpr -> . UnExpr
    (61) UnExpr -> . MINUS PrimExpr
    (62) UnExpr -> . EXPLAMATION PrimExpr
    (63) UnExpr -> . PrimExpr
    (66) PrimExpr -> . ID LPAREN ListExpr RPAREN
    (67) PrimExpr -> . ID LPAREN RPAREN
    (68) PrimExpr -> . ID LCOLC Expr RCOLC
    (69) PrimExpr -> . ID
    (70) PrimExpr -> . CONSTSTRING
    (71) PrimExpr -> . NUMBER
    (72) PrimExpr -> . LPAREN Expr RPAREN

    RBRACE          shift and go to state 26
    SEMICOLON       shift and go to state 28
    RETORNE         shift and go to state 30
    LEIA            shift and go to state 31
    ESCREVA         shift and go to state 33
    NOVALINHA       shift and go to state 34
    SE              shift and go to state 35
    ENQUANTO        shift and go to state 37
    LBRACE          shift and go to state 10
    ID              shift and go to state 42
    MINUS           shift and go to state 48
    EXPLAMATION     shift and go to state 51
    CONSTSTRING     shift and go to state 52
    NUMBER          shift and go to state 53
    LPAREN          shift and go to state 36

    ListaComando                   shift and go to state 25
    Comando                        shift and go to state 27
    Expr                           shift and go to state 29
    LValueExpr                     shift and go to state 32
    Bloco                          shift and go to state 38
    AssignExpr                     shift and go to state 39
    CondExpr                       shift and go to state 40
    OrExpr                         shift and go to state 41
    AndExpr                        shift and go to state 43
    EqExpr                         shift and go to state 44
    DesigExpr                      shift and go to state 45
    AddExpr                        shift and go to state 46
    MulExpr                        shift and go to state 47
    UnExpr                         shift and go to state 49
    PrimExpr                       shift and go to state 50

state 17

    (20) ListaDeclVar -> Tipo . ID DeclVar SEMICOLON ListaDeclVar
    (21) ListaDeclVar -> Tipo . ID LCOLC NUMBER RCOLC DeclVar SEMICOLON ListaDeclVar

    ID              shift and go to state 54


state 18

    (2) DeclFuncVar -> Tipo ID DeclVar SEMICOLON . DeclFuncVar
    (2) DeclFuncVar -> . Tipo ID DeclVar SEMICOLON DeclFuncVar
    (3) DeclFuncVar -> . Tipo ID LCOLC NUMBER RCOLC DeclVar SEMICOLON DeclFuncVar
    (4) DeclFuncVar -> . Tipo ID DeclFunc DeclFuncVar
    (5) DeclFuncVar -> .
    (22) Tipo -> . INT
    (23) Tipo -> . CAR

    PROGRAMA        reduce using rule 5 (DeclFuncVar -> .)
    INT             shift and go to state 4
    CAR             shift and go to state 5

    Tipo                           shift and go to state 3
    DeclFuncVar                    shift and go to state 55

state 19

    (3) DeclFuncVar -> Tipo ID LCOLC NUMBER . RCOLC DeclVar SEMICOLON DeclFuncVar

    RCOLC           shift and go to state 56


state 20

    (4) DeclFuncVar -> Tipo ID DeclFunc DeclFuncVar .

    PROGRAMA        reduce using rule 4 (DeclFuncVar -> Tipo ID DeclFunc DeclFuncVar .)


state 21

    (7) DeclVar -> COMMA ID . DeclVar
    (8) DeclVar -> COMMA ID . LCOLC NUMBER RCOLC DeclVar
    (7) DeclVar -> . COMMA ID DeclVar
    (8) DeclVar -> . COMMA ID LCOLC NUMBER RCOLC DeclVar
    (9) DeclVar -> .

    LCOLC           shift and go to state 58
    COMMA           shift and go to state 14
    SEMICOLON       reduce using rule 9 (DeclVar -> .)

    DeclVar                        shift and go to state 57

state 22

    (10) DeclFunc -> LPAREN ListaParametros . RPAREN Bloco

    RPAREN          shift and go to state 59


state 23

    (12) ListaParametros -> ListaParametrosCont .

    RPAREN          reduce using rule 12 (ListaParametros -> ListaParametrosCont .)


state 24

    (13) ListaParametrosCont -> Tipo . ID
    (14) ListaParametrosCont -> Tipo . ID LCOLC RCOLC
    (15) ListaParametrosCont -> Tipo . ID COMMA ListaParametrosCont
    (16) ListaParametrosCont -> Tipo . ID LCOLC RCOLC COMMA ListaParametrosCont

    ID              shift and go to state 60


state 25

    (17) Bloco -> LBRACE ListaDeclVar ListaComando . RBRACE

    RBRACE          shift and go to state 61


state 26

    (18) Bloco -> LBRACE ListaDeclVar RBRACE .
